--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,18 @@
+0.6 (2009-12-03)
+
+* Integration with URL Shortener services, including an option to shorten the current page
+* Ability to use Twitter's retweet feature (old RT still available through 'share' option)
+* Showing 'from' and 'in reply to' information
+* Making some options available through a bare-bones options page
+* Lots of performance tweaks
+* Lots of improvements with keyboard navigation
+* Improving error messages when calls to Twitter's API fail
+* Big cleanup reducing extension size
+* Fixing bug that would incorrectly identify hashtags inside URLs
+* Fixing bug causing replies without in_reply_to_id
+* Fixing bug when denying OAuth authorization
+* Fixing some UI bugs
+
 0.51 (2009-11-24)
 
 * This version fixes some bugs introduced with OAuth authentication, it also
