--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+1.4.2 (2010-01-06)
+
+* Bugfix: Older versions of Chrome (beta channel) don't support 'allFrames'
+  attribute when calling executeScript() and insertCSS()
+
 1.4.1 (2010-01-05)
 
 * Fixing nasty bug when lists timelines are disabled.
