--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+1.4.9.1 (2010-01-20)
+(Emergency release due to 1.4.9 bugs, reverting to 1.4.8 adding only
+ the fix for the 'gray square' bug when opening the extension.
+ New features in 1.4.9 will be *disabled* until next release.)
+
 1.4.9 (2010-01-19)
 (Another minor release with a few features and many bugfixes)
 
