--- a/Changelog
+++ b/Changelog
@@ -1,14 +1,30 @@
+1.6.0 (2010-02-08)
+
+* Awesome new unified timeline. Now you can select multiple timelines and join them
+  in a single one. (You can disable this feature in the options page)
+* Expanding shortened URLs while hovering them. (Disableable)
+* Allowing tweets to be colored depending on their original timeline
+* Allowing using alpha channel in all colorpickers shown in the options page
+* Adding font family and font size configurations in the options page
+* Changing default font family to Helvetica due to some render problems
+  people were having with Lucida, the previous default one
+* Changing refresh interval settings to use seconds instead of milliseconds
+* Adding URLi.nl shortener
+* Fixing bug that caused html entities to be confounded with hash tags
+* Fixing background color for retweet bubble in Darkness theme (Thanks pmbarros)
+
+
 1.5.1 (2010-02-01)
 (Mostly bugfixes, major release coming next weekend)
 
-Fixed issue causing tweets to stop updating when closing the popup window while scrolling down
-Fixed issue that caused API hits even after logging out
-Proper initializing badge text to avoid stalled new tweets count
-Groundwork for using desktop notification (still disabled and not in the options page)
-New url shortener: twieat.us (Thanks Edward J. Yoon)
-Fixed issue causing reply all feature to include user's own screenname to the tweet (Thanks Xiaoxin Lu [hyperlink])
-Added custom scrollbars to darkness theme (Thanks hyperlink)
-Fixed darkness theme where character counter was not visible (Thanks hyperlink)
+* Fixed issue causing tweets to stop updating when closing the popup window while scrolling down
+* Fixed issue that caused API hits even after logging out
+* Proper initializing badge text to avoid stalled new tweets count
+* Groundwork for using desktop notification (still disabled and not in the options page)
+* New url shortener: twieat.us (Thanks Edward J. Yoon)
+* Fixed issue causing reply all feature to include user's own screenname to the tweet (Thanks Xiaoxin Lu [hyperlink])
+* Added custom scrollbars to darkness theme (Thanks hyperlink)
+* Fixed darkness theme where character counter was not visible (Thanks hyperlink)
 
 1.5.0 (2010-01-24)
 
