--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+1.8.5 (2010-05-13)
+ * Mostly bugfixes, I'll finish writing a proper changelog latter today.
+
 1.8.0 (2010-04-12)
 
 * New right-click context menu in the tabs area, allowing you to:
