--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 1.8.5 (2010-05-13)
  * Mostly bugfixes, I'll finish writing a proper changelog latter today.
+   Meanwhile you can check the GitHub commit page.
 
 1.8.0 (2010-04-12)
 
